# SillyPlot

./: .gitignore  CMakeLists.txt  README.md  TODO  dockerfile  makeDocker.sh  runDocker.sh
docs/: mkdocs.yml
docs/docs/: about.md  examples.md  index.md  installation.md
docs/docs/api/: color.md  legend.md  plot.md
examples/: basic_plot.cpp
include/: yapl.hpp
include/SillyPlot/: plot.hpp
include/yapl/: color.hpp  exception.hpp  legend.hpp  painter.hpp  plot.hpp
src/: color.cpp  exception.cpp  painter.cpp  plot.cpp
tests/: test_plot.cpp
